fix: folder collapsing problem led by files moving or creation

--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -4,6 +4,11 @@
   font-size: 22px;
   -webkit-text-stroke: 1.7px #f6f8f4;
 }
+#trash-icon{
+  color: #a8a4a4;
+  font-size: 22px;
+  -webkit-text-stroke: 2.5px #f6f8f4;
+}
 #preview-icon, #trash-icon, #dot-icon{
   margin-right: 10px;
 }
